Изменение controller на restController для объектов, js для его функционирования

--- a/src/main/resources/templates/add-object.html
+++ b/src/main/resources/templates/add-object.html
@@ -136,7 +136,7 @@
                             </tr>
                             </tbody>
                         </table>
-                        <button class="btn btn-primary" type="submit">Сохранить</button>
+                        <button class="btn btn-primary" type="button">Сохранить</button>
                     </form>
                 </div>
             </div>
@@ -145,6 +145,6 @@
     <!-- Clearfix -->
     <div class="clearfix"></div>
 </div>
-
+<script th:src="@{/js/addObject.js}"></script>
 </body>
 </html>
