--- a/src/main/resources/static/css/style-304.css
+++ b/src/main/resources/static/css/style-304.css
@@ -568,6 +568,7 @@ hr {
     border-bottom:2px solid #000000;
     margin:30px 0px;
 }
+
 @media (max-width: 767px){
     .resume .main-block{
         text-align:center;
@@ -612,11 +613,12 @@ hr {
     padding-top: 50px;
 }
 
-.resume .main-block .objective-content .close{
+.resume .main-block .objective-content .move img{
     width: 48px;
     height:48px;
     display: none;
 }
+
 
 .resume .main-block .objective-content .my_card :hover .close{
     display: block;
