Баг с кнопкой редактирования + кнопка удаления клиентов

--- a/agency-server/src/main/resources/static/css/style-304.css
+++ b/agency-server/src/main/resources/static/css/style-304.css
@@ -616,7 +616,7 @@ hr {
 .resume .main-block .objective-content .move img{
     width: 48px;
     height:48px;
-    display: none;
+    opacity: 0;
 }
 
 
