--- a/agency-server/src/main/resources/templates/all-buyer.html
+++ b/agency-server/src/main/resources/templates/all-buyer.html
@@ -42,19 +42,23 @@
                         <div class="card" th:each="buyer,iterator : ${buyers}" th:with="backet='okm3agency'">
                             <div class="card-header" th:id="'heading'+${iterator.index}">
                                 <div class="row justify-content-md-center">
-                                    <button type="button" class="btn btn-link col-7 col col-lg-6" th:text="${buyer.getFio()}"
+                                    <button type="button" class="btn btn-link col-6 col-md-4" th:text="${buyer.getFio()}"
                                             data-toggle="collapse" th:data-target="'#collapse'+${iterator.index}">
                                     </button>
-                                    <div class="row">
-                                        <form th:action="@{/managers/clients/buyers/add}" class="form-inline col"
-                                              th:object="${buyer}" method="post" enctype="multipart/form-data">
-                                            <div class="row">
-                                            <input class="form-control col" type="file" name="fileName" multiple="multiple"/>
-                                            <input type="hidden" name="id_buyer" value="" th:value="${buyer.getId_buyer()}"/>
-                                            <button class="btn btn-primary col col-lg-4" type="submit">Сохранить</button>
-                                            </div>
-                                        </form>
-                                        <div class="move">
+                                    <form th:action="@{/managers/clients/buyers/add}" class="form-inline col-md-auto"
+                                          th:object="${buyer}" method="post" enctype="multipart/form-data">
+                                        <div class="row">
+                                        <input class="form-control col" type="file" name="fileName" multiple="multiple"/>
+                                        <input type="hidden" name="id_buyer" value="" th:value="${buyer.getId_buyer()}"/>
+                                        <button class="btn btn-primary col col-lg-4" type="submit">Сохранить</button>
+                                        </div>
+                                    </form>
+                                    <div class="row justify-content-end">
+                                        <div class="move col-md-auto">
+                                            <a th:href="'/managers/clients/buyer/delete/'+ ${buyer.id_buyer}" >
+                                                <img src="/image/delete.png" class="close" alt="удоли"/>
+                                            </a>
+                                            <div class="w-100"></div>
                                             <a th:href="'/managers/clients/buyer/update/'+ ${buyer.id_buyer}" >
                                                 <img src="/image/modify.png" class="modify" alt="изменить"/>
                                             </a>
@@ -82,6 +86,6 @@
     <!-- Javascript files -->
     <!-- jQuery -->
     <script th:src="@{/js/clear.js}"></script>
-    <script th:src="@{/js/buer-seller.js}"></script>
+    <script th:src="@{/js/buyer-seller.js}"></script>
 </body>
 </html>
